Fixed config textarea width.  being too small sometimes. Updated button spacings

--- a/src/app/settings/config-edit/config-edit.component.css
+++ b/src/app/settings/config-edit/config-edit.component.css
@@ -11,11 +11,10 @@ label {
   overflow-y: scroll;
   min-height: 350px;
   padding: 5px;
-  max-width: 294px;
   width: 100%;
   resize: none;
 }
 
-#reset-changes {
-  margin-top: 12px;
+button {
+  margin: 10px;
 }
